--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <nav class="navbar flex justify-between p-10  bg-[#F9F7F3]  shadow-sm"
-    >
+    <!-- navbar -->
+    <nav class="navbar flex justify-between p-10  bg-[#F9F7F3]  shadow-sm">
         <div class="pl-14">
             <a class="btn btn-ghost h-[49px] w-[110px] py-7 px-16 bg-[#B4F461] text-3xl">Blog</a>
         </div>
@@ -25,20 +25,76 @@
         </div>
         <div class="flex gap-4 font-semibold">
             <img src="assets/coin.png" alt="">
-            <h3 class="text-3xl pr-20">5500 BDT</h3>
+            <h3 id="balance" class="text-3xl pr-20">5500 BDT</h3>
         </div>
     </nav>
-    <!-- button -->
-     <div class="flex justify-center mt-20 mb-8 gap-10">
-        <a class="btn btn-ghost  py-7 px-12 bg-[#B4F461] text-3xl border-x-black rounded-md font-semibold">Donation</a>
-        <a class="btn btn-ghost py-7 px-12 bg-[white] text-3xl border-black rounded-lg font-bold">History</a>
-     </div>
+    <!-- button donation and history -->
+    <div class="flex justify-center mt-20 mb-8 gap-10">
+        <a id="donationBtn"
+            class="btn btn-ghost  py-7 px-12 bg-[#B4F461] text-3xl border-x-black rounded-md font-semibold">Donation</a>
 
-     <!-- main -->
-      <main>
+        <a id="historyBtn" class="btn btn-ghost py-7 px-12  text-3xl border-gray-200 rounded-lg font-bold">History</a>
+    </div>
 
-        
-      </main>
+    <!-- main -->
+    <main id="mainSection" class="max-w-[1140px] w-full mx-auto px-4 py-6">
+
+        <div class="hero bg-base-200 ">
+            <div class="hero-content flex-col lg:flex-row items-stretch gap-7">
+                <!-- img -->
+                <img src="assets/noakhali.png" class="h-[389px] w-[522px]" />
+
+                <!-- content -->
+                <div class="h-[389px] w-[522px]">
+                    <div>
+                        <button
+                            class="btn btn-primary text-xl w-[110px] h-[44px] bg-slate-100  mb-5 text-black font-bold border-none"><img
+                                src="assets/coin.png" alt="">
+                            <h3 id="totalDonation">0</h3>BDT
+                        </button>
+                        <h1 class="text-2xl font-bold w-[512px]">Donate for Flood at Noakhali, Bangladesh</h1>
+                        <p class="py-6 w-[522px]">
+                            The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
+                            donation will help provide essential supplies and to those affected by this disaster. Every
+                            contribution, big or small, makes difference. Please join us in supporting the relief
+                            efforts
+                            and making a positive impact on the lives of those in need.
+                        </p>
+                    </div>
+                    <!-- fieldset -->
+                    <div>
+
+                        <div class="w-full flex flex-col gap-3">
+
+                            <!-- input -->
+                            <input id="amount" type="text" class="w-full h-[56px] rounded-lg border-gray-300"
+                                placeholder="Donation Amount" />
+                            <a id="donateNowBtn"
+                                class="btn btn-ghost w-full h-[57px] py-3 px-12 bg-[#B4F461] text-3xl border-x-black border-5 rounded-md font-semibold">Donate
+                                Now</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- hisoty -->
+    <section id="historySection" class="hidden">
+        <h1 class=" flex justify-center font-bold text-green-800 mx-auto text-3xl">All Donation Transactions</h1>
+        <div id="addHistory" class="rounded-lg shadow-md max-w-[1140px] w-full flex flex-col mx-auto p-10">
+
+            
+        </div>
+    </section>
 </body>
+
+<!-- script -->
+<!-- parseFloat -->
+<script>
+    </script>
+<script src="js file/feature.js"></script>
+<script src="js file/calculation.js"></script>
 
 </html>
