--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- main -->
-    <main id="mainSection" class="max-w-[1140px] w-full mx-auto px-4 py-6">
+    <main id="mainSection" class="max-w-[1140px] w-full mx-auto px-4 py-6 space-y-10">
 
         <div class="hero bg-base-200 ">
             <div class="hero-content flex-col lg:flex-row items-stretch gap-7">
@@ -59,6 +59,44 @@
                             contribution, big or small, makes difference. Please join us in supporting the relief
                             efforts
                             and making a positive impact on the lives of those in need.
+                        </p>
+                    </div>
+                    <!-- fieldset -->
+                    <div>
+
+                        <div class="w-full flex flex-col gap-3">
+
+                            <!-- input -->
+                            <input id="amount" type="text" class="w-full h-[56px] rounded-lg border-gray-300"
+                                placeholder="Donation Amount" />
+                            <a id="donateNowBtn"
+                                class="btn btn-ghost w-full h-[57px] py-3 px-12 bg-[#B4F461] text-3xl border-x-black border-5 rounded-md font-semibold">Donate
+                                Now</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- second -->
+
+         <div class="hero bg-base-200 ">
+            <div class="hero-content flex-col lg:flex-row items-stretch gap-7">
+                <!-- img -->
+                <img src="assets/feni.png" class="h-[389px] w-[522px]" />
+
+                <!-- content -->
+                <div class="h-[389px] w-[522px]">
+                    <div>
+                        <button
+                            class="btn btn-primary text-xl w-[110px] h-[44px] bg-slate-100  mb-5 text-black font-bold border-none"><img
+                                src="assets/coin.png" alt="">
+                            <h3 id="totalDonation">0</h3>BDT
+                        </button>
+                        <h1 class="text-2xl font-bold w-[512px]">Donate for Flood Relief in Feni,Bangladesh</h1>
+                        <p class="py-6 w-[522px]">
+                            The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need. 
                         </p>
                     </div>
                     <!-- fieldset -->
