--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="hero bg-base-200 ">
             <div class="hero-content flex-col lg:flex-row items-stretch gap-7">
                 <!-- img -->
-                <img src="assets/noakhali.png" class="h-[389px] w-[522px]" />
+                <!-- <img src="assets/noakhali.png" class="h-[389px] w-[522px]" /> -->
+                <img src="assets/food hunger child gaza.avif" class="h-[389px] w-[522px] rounded-lg" />
 
                 <!-- content -->
                 <div class="h-[389px] w-[522px]">
@@ -52,13 +53,13 @@
                                 src="assets/coin.png" alt="">
                             <h3 id="totalDonation">0</h3>BDT
                         </button>
-                        <h1 class="text-2xl font-bold w-[512px]">Donate for Flood at Noakhali, Bangladesh</h1>
+                        <h1 class="text-2xl font-bold w-[512px]">Donate for Food at Gaza, Palestine</h1>
                         <p class="py-6 w-[522px]">
-                            The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
-                            donation will help provide essential supplies and to those affected by this disaster. Every
-                            contribution, big or small, makes difference. Please join us in supporting the relief
-                            efforts
-                            and making a positive impact on the lives of those in need.
+                            Thousands of Palestinians have overwhelmed a food distribution centre in southern Gaza,
+                            driven by hunger after nearly three months without access to fresh supplies.
+
+                            It was a chaotic scene on Tuesday in the southern city of Rafah, as men, women and children
+                            thronged the aid centre, seeking food to stave off malnutrition and starvation.
                         </p>
                     </div>
                     <!-- fieldset -->
@@ -81,7 +82,7 @@
 
         <!-- second -->
 
-         <div class="hero bg-base-200 ">
+        <div class="hero bg-base-200 ">
             <div class="hero-content flex-col lg:flex-row items-stretch gap-7">
                 <!-- img -->
                 <img src="assets/feni.png" class="h-[389px] w-[522px]" />
@@ -96,7 +97,12 @@
                         </button>
                         <h1 class="text-2xl font-bold w-[512px]">Donate for Flood Relief in Feni,Bangladesh</h1>
                         <p class="py-6 w-[522px]">
-                            The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need. 
+                            The recent floods in Feni have devastated local communities, leading to severe disruption
+                            and loss. Your generous donation will help provide immediate aid, including food, clean
+                            water, and medical supplies, to those affected by this calamity. Together, we can offer
+                            crucial support and help rebuild lives in the aftermath of this disaster. Every contribution
+                            counts towards making a real difference. Please consider donating today to assist those in
+                            urgent need.
                         </p>
                     </div>
                     <!-- fieldset -->
@@ -123,7 +129,7 @@
         <h1 class=" flex justify-center font-bold text-green-800 mx-auto text-3xl">All Donation Transactions</h1>
         <div id="addHistory" class="rounded-lg shadow-md max-w-[1140px] w-full flex flex-col mx-auto p-10">
 
-            
+
         </div>
     </section>
 </body>
@@ -131,7 +137,7 @@
 <!-- script -->
 <!-- parseFloat -->
 <script>
-    </script>
+</script>
 <script src="js file/feature.js"></script>
 <script src="js file/calculation.js"></script>
 
