done assignment without responsiveness

--- a/blog.html
+++ b/blog.html
@@ -20,11 +20,11 @@
 <body>
     <nav class="navbar flex justify-between p-10  bg-[#F9F7F3]  shadow-sm">
         <div class="pl-14">
-            <a id="HomeBtn"
+            <a id="HomeBtn" href="index.html"
                 class=" btn btn-ghost h-[49px] w-[110px] py-7 px-16 bg-[#fc4747] text-3xl font-bold text-white">Home</a>
         </div>
         <div class="flex items-center gap-4">
-            <img src="assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="...assets/">
             <h3 class="text-4xl font-bold text-red-700 "><span class="text-green-700">Donate</span>Palestine</h3>
         </div>
         <div class="flex gap-4 font-semibold">
@@ -83,7 +83,7 @@
         </div>
 
     </section>
-    <script src="feature.js"></script>
+    <script src="js/feature.js"></script>
 </body>
 
 </html>
